[tool.poetry]
name = "climbers-guide-parser"
version = "0.1.0"
description = ""
authors = ["Scott Barnes <scottreidbarnes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.0"
beautifulsoup4 = "^4.10.0"
lxml = "^4.6.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
