[tool.poetry]
name = "climbers-guide-parser"
version = "0.2.0"
description = ""
authors = ["Scott Barnes <scottreidbarnes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.0"
beautifulsoup4 = "^4.10.0"
lxml = "^4.6.4"
python-slugify = "^5.0.2"
click = "^8.1.3"
SQLAlchemy = "^1.4.36"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
ipython = "^8.10.0"
black = "^21.12b0"
pre-commit = "^2.16.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
climbers-guide-parser = "climbers_guide_parser.parser:main"

[tool.black]
line-length = 100
target-version = ['py310']
experimental_string_processing = true

[tool.isort]
profile = 'black'
multi_line_output = 3
